[package]
name = "turtle_proxy"
version = "0.1.0"
authors = ["heshouhui <hesh915@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
slog = "2"
slog-async = "2"
slog-term = "2"
tokio = { version = "1", features = ["full"] }